# QXlsx

./: README.md  Setup.md
HelloWorld/: CMakeLists.txt  main.cpp
YXlsx/: CMakeLists.txt
YXlsx/header/: xlsxabstractooxmlfile.h  xlsxabstractooxmlfile_p.h  xlsxabstractsheet.h  xlsxabstractsheet_p.h  xlsxcell.h  xlsxcell_p.h  xlsxcelllocation.h  xlsxcellrange.h  xlsxcellreference.h  xlsxcontenttypes_p.h  xlsxdatavalidation.h  xlsxdatavalidation_p.h  xlsxdocpropsapp_p.h  xlsxdocpropscore_p.h  xlsxdocument.h  xlsxdocument_p.h  xlsxformat.h  xlsxformat_p.h  xlsxglobal.h  xlsxrelationships_p.h  xlsxrichstring.h  xlsxrichstring_p.h  xlsxsharedstrings_p.h  xlsxsimpleooxmlfile_p.h  xlsxutility_p.h  xlsxworkbook.h  xlsxworkbook_p.h  xlsxworksheet.h  xlsxworksheet_p.h
YXlsx/source/: xlsxabstractooxmlfile.cpp  xlsxabstractsheet.cpp  xlsxcell.cpp  xlsxcelllocation.cpp  xlsxcellrange.cpp  xlsxcellreference.cpp  xlsxcontenttypes.cpp  xlsxdatavalidation.cpp  xlsxdocpropsapp.cpp  xlsxdocpropscore.cpp  xlsxdocument.cpp  xlsxformat.cpp  xlsxrelationships.cpp  xlsxrichstring.cpp  xlsxsharedstrings.cpp  xlsxsimpleooxmlfile.cpp  xlsxutility.cpp  xlsxworkbook.cpp  xlsxworksheet.cpp
YXlsx/utils/: zipreader.cpp  zipreader.h  zipwriter.cpp  zipwriter.h
